--- a/assets/templates/layout/layout.pug
+++ b/assets/templates/layout/layout.pug
@@ -5,5 +5,6 @@ html(lang="en")
     head
         include ../helpers/head
     body
+        include ../helpers/gtm.html
         .w
             block content
