link to new whitepaper added

--- a/assets/templates/blocks/images.pug
+++ b/assets/templates/blocks/images.pug
@@ -1,4 +1,4 @@
-- var link = "http://static.fluence.ai/Whitepaper.pdf"
+- var link = "https://github.com/fluencelabs/research/blob/master/FluencePaper.pdf"
 
 h2 How Fluence solves these issues? 
 
