--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -68,6 +68,17 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
             a(href="https://github.com/RicoGit")  GitHub
 
     +person(
+        'dmitri.png',
+        'Dmitry Shakhtarin',
+        'Development'
+    )
+        p Spent a year before developing a crypto messenger<br/>and now brings his expertise in cryptography to Fluence project.
+
+        p
+           // a(href="https://www.linkedin.com/in/constantine-solovev-6268ba99/") LinkedIn
+           // a(href="https://github.com/RicoGit")  GitHub
+            
+    +person(
         'a_rtemiy.jpg',
         'Artemiy Liarskiy',
         'Dev Relations'
