link to new paper added

--- a/assets/templates/blocks/footer.pug
+++ b/assets/templates/blocks/footer.pug
@@ -3,7 +3,7 @@
 - var footer_link_policy     = "#policy"
 - var footer_link_demo       = "https://github.com/FluenceLabs"
 - var footer_link_about      = "/about.html"
-- var footer_link_whitepaper = "http://static.fluence.ai/Whitepaper.pdf"
+- var footer_link_whitepaper = "https://github.com/fluencelabs/research/blob/master/FluencePaper.pdf"
 - var footer_link_blog       = "https://blog.fluence.ai/"
 
 .footer-logo
