--- a/assets/templates/blocks/squares_small.pug
+++ b/assets/templates/blocks/squares_small.pug
@@ -62,4 +62,4 @@ p Our network is best for
         span.icon
             include ../../img/social-gh.inline.svg
 
-        | Checkout out Github
+        | Checkout our Github
