--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -72,11 +72,11 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Dmitry Shakhtarin',
         'Development'
     )
-        p Spent a year before developing a crypto messenger<br/>and now brings his expertise in cryptography to Fluence project.
+        p Spent 2017 developing a crypto messenger<br/>and now brings his expertise in cryptography to Fluence project.
 
         p
-           // a(href="https://www.linkedin.com/in/constantine-solovev-6268ba99/") LinkedIn
-           // a(href="https://github.com/RicoGit")  GitHub
+           a(href="https://www.linkedin.com/in/dmitriy-shakhtarin-645b0b72/") LinkedIn
+           a(href="https://github.com/DieMyst")  GitHub
             
     +person(
         'a_rtemiy.jpg',
