--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -72,7 +72,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Dmitry Shakhtarin',
         'Development'
     )
-        p Spent 2017 developing a crypto messenger<br/>and now brings his expertise in cryptography to Fluence project.
+        p Software engineer with strong expertise<br/>in cryptography, functional Scala programming<br/> and backend development. Previously he worked<br/>on building the end-to-end encrypted and completely anonymous messaging platform titanium.im.
 
         p
            a(href="https://www.linkedin.com/in/dmitriy-shakhtarin-645b0b72/") LinkedIn
