--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -47,7 +47,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
     )
         p Experienced distributed systems engineer with deep understanding of computer science and game theory. At 
             a(href="https://metamarkets.com/")  Metamarkets
-            |  he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. At 
+            |  he built a peta-byte scale analytics platform capable of processing hundreds of billions events/day. At 
             a(href="https://www.stitchfix.com")  Stitch Fix,
             |  he worked on building the ML infrastructure.
 
