--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -30,7 +30,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
             a(href="https://www.linkedin.com/in/evgeny-ponomarev-4ab3672a/") LinkedIn
 
     +person(
-        '_tmp_person2.png',
+        'alari.jpg',
         'Dmitry Kurinsky',
         'CTO'
     )
