--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -96,7 +96,8 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         p Anna has a background in marketing<br/>and business development<br/>in the field of Technology Entrepreneurship.<br/>Working on her MBA,<br/>she has been collaborating with startups<br/>as well as with major brands.
 
         p
-            a(href="https://www.linkedin.com/in/orchimada/") LinkedIn
+            a(href="https://www.linkedin.com/in/lekanova/") LinkedIn
+            
 h2 Advisors
 .persons-list
     +person(
