--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -68,7 +68,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
             a(href="https://github.com/RicoGit")  GitHub
 
     +person(
-        'dmitri.png',
+        'dmitri.jpg',
         'Dmitry Shakhtarin',
         'Development'
     )
