--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -43,7 +43,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
     +person(
         'a_demidko.jpg',
         'Alexander Demidko',
-        'Research'
+        'Chief Research Officer'
     )
         p Experienced distributed systems engineer with deep understanding of computer science and game theory. At 
             a(href="https://metamarkets.com/")  Metamarkets
@@ -115,11 +115,21 @@ h2 Advisors
             a(href="https://www.linkedin.com/in/nhan-phan-a20a348/") LinkedIn
 
     +person(
-        'gordon.jpeg',
-        'Gordon Hall',
-        'Orc network, ex-Storj'
+        'lasse.jpg',
+        'Lasse Clausen',
+        'Angel Investor, 1kx'
     )
-        p "Bookchin". Distributed systems hacker and free software activist. He is the author<br/> of the core libraries that drive Storj, ORC, as well as their underlying implementation of the Kademlia distributed hash table.
+        p Token angel investor at 1kx<br/>with an impressive protfolio of successful projects.
         
         p
             a(href="https://github.com/bookchin") GitHub
+     
+     +person(
+        'christopher.jpg',
+        'Christopher Heymann',
+        'Angel Investor, 1kx'
+    )
+        p Token angel investor at 1kx<br/>with an impressive protfolio of successful projects.
+        
+        p
+            a(href="https://www.linkedin.com/in/christopher-heymann/") GitHub
