--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -115,21 +115,31 @@ h2 Advisors
             a(href="https://www.linkedin.com/in/nhan-phan-a20a348/") LinkedIn
 
     +person(
+        'gordon.jpeg',
+        'Gordon Hall',
+        'Orc Network, Storj'
+    )
+        p The Bookchin. Distributed systems hacker<br/>and free software activist.<br/>He is the author of the core libraries that drive Storj,<br/>ORC, as well as their underlying implementation<br/>of the Kademlia distributed hash table.
+        
+        p
+            a(href="https://github.com/bookchin") GitHub
+            
+    +person(
         'lasse.jpg',
         'Lasse Clausen',
         'Angel Investor, 1kx'
     )
-        p Token angel investor at 1kx<br/>with an impressive protfolio of successful projects.
+        p Token angel investor at 1kx<br/>with an impressive portfolio of successful projects.
         
         p
-            a(href="https://github.com/bookchin") GitHub
+            a(href="https://www.linkedin.com/in/lasseclausen/") LinkedIn
      
     +person(
         'christopher.jpg',
         'Christopher Heymann',
         'Angel Investor, 1kx'
     )
-        p Token angel investor at 1kx<br/>with an impressive protfolio of successful projects.
+        p Token angel investor at 1kx<br/>with an impressive portfolio of successful projects.
         
         p
-            a(href="https://www.linkedin.com/in/christopher-heymann/") GitHub
+            a(href="https://www.linkedin.com/in/christopher-heymann/") LinkedIn
