--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -129,7 +129,7 @@ h2 Advisors
         'Lasse Clausen',
         'Angel Investor, 1kx'
     )
-        p Token angel investor at 1kx<br/>with an impressive portfolio of successful projects.
+        p Token angel investor at 1kx<br/> and fundrising expert. Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/lasseclausen/") LinkedIn
@@ -139,7 +139,7 @@ h2 Advisors
         'Christopher Heymann',
         'Angel Investor, 1kx'
     )
-        p Token angel investor at 1kx<br/>with an impressive portfolio of successful projects.
+        p Token angel investor at 1kx<br/>and technical expert. Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/christopher-heymann/") LinkedIn
