--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -127,9 +127,9 @@ h2 Advisors
     +person(
         'lasse.jpg',
         'Lasse Clausen',
-        'Angel Investor, 1kx'
+        '1kx capital'
     )
-        p Token angel investor at 1kx<br/> and fundrising expert. Advisor at: Dock.io, Request Network, Apex, FundRequest.
+        p Token angel investor at 1kx<br/>focusing on token launches and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/lasseclausen/") LinkedIn
@@ -137,9 +137,9 @@ h2 Advisors
     +person(
         'christopher.jpg',
         'Christopher Heymann',
-        'Angel Investor, 1kx'
+        'qkx capital'
     )
-        p Token angel investor at 1kx<br/>and technical expert. Advisor at: Dock.io, Request Network, Apex, FundRequest.
+        p Token angel investor at 1kx<br/>focusing on technology and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/christopher-heymann/") LinkedIn
