--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -137,7 +137,7 @@ h2 Advisors
     +person(
         'christopher.jpg',
         'Christopher Heymann',
-        'qkx capital'
+        '1kx capital'
     )
         p Token angel investor at 1kx<br/>focusing on technology and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
