--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -129,7 +129,7 @@ h2 Advisors
         'Lasse Clausen',
         '1kx capital'
     )
-        p Token angel investor at 1kx<br/>focusing on token launches and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
+        p Token angel investor at 1kx<br/>focusing on token launches<br/>and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/lasseclausen/") LinkedIn
@@ -139,7 +139,7 @@ h2 Advisors
         'Christopher Heymann',
         '1kx capital'
     )
-        p Token angel investor at 1kx<br/>focusing on technology and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
+        p Token angel investor at 1kx<br/>focusing on technology<br/>and token economics.<br/>Advisor at: Dock.io, Request Network, Apex, FundRequest.
         
         p
             a(href="https://www.linkedin.com/in/christopher-heymann/") LinkedIn
