--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -31,7 +31,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
 
     +person(
         'alari.jpg',
-        'Dmitry Kurinsky',
+        'Dmitry Kurinskiy',
         'CTO'
     )
         p Software engineer and technical leader, with solid expertise<br/> in complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
