--- a/assets/templates/blocks/squares.pug
+++ b/assets/templates/blocks/squares.pug
@@ -19,7 +19,7 @@ h2.__polyfill(data-supports="textStroke") Internet today
     +squareblock(
         '2',
         'Data leaks',
-        'Centralized clouds are vulnerable, but signigicant leaks of sensitive data lead only to media buzz with no long term changes.',
+        'Centralized clouds are vulnerable, but significant leaks of sensitive data lead only to media buzz with no long term changes.',
         'Datasets are cryptographically protected and impossible to break. No database dump through a single access point.'
     )
     +squareblock(
