--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -149,7 +149,7 @@ h2 Advisors
         'Andrey Lelikov',
         'Microsoft'
     )
-        p A well-known expert low-level security systems.<br/>At Microsoft he was a security engineer focused<br/>on software obfuscation, cryptography, anti-hacking<br/>and robustness technologies.
+        p Security engineer.<br/>At Microsoft he was focused<br/>on software obfuscation, cryptography, anti-hacking<br/>and robustness technologies.
         
         p
             a(href="https://www.linkedin.com/in/andrey-lelikov-b0b263/") LinkedIn        
