--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -77,7 +77,18 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         p
            a(href="https://www.linkedin.com/in/dmitriy-shakhtarin-645b0b72/") LinkedIn
            a(href="https://github.com/DieMyst")  GitHub
-            
+    
+    +person(
+        'sergeev.png',
+        'Dmitry Sergeev',
+        'Research'
+    )
+        p Backend software engineer. Built a heavily loaded game server engine<br/>for the Tanki Online game.<br/>Led big data processing team<br/>at AlternativaPlatform.<br/>Strong expertise in algorithms<br/>and competitive programming, ACM contest finalist.
+
+        p
+            a(href="https://www.linkedin.com/in/dmitry-sergeev-09b3244a/") LinkedIn
+            a(href="https://github.com/DmiSergeev")  GitHub
+        
     +person(
         'a_rtemiy.jpg',
         'Artemiy Liarskiy',
