--- a/assets/templates/blocks/news.pug
+++ b/assets/templates/blocks/news.pug
@@ -16,6 +16,7 @@ h2 Latest news
     .news-container__items
         .__slider
 
+            .slider-item: +news_item('Feb 14, 2018', 'March status update', 'https://blog.fluence.ai/march-2018-status-update-406b67cd5365')
             .slider-item: +news_item('Feb 14, 2018', 'Jan-Feb status update', 'https://blog.fluence.ai/january-february-status-update-13733c494bad')
             .slider-item: +news_item('Jan 25, 2018', 'Fluence partnership with Friend', 'https://blog.fluence.ai/fluence-partnership-with-friend-platform-c263ece496fd')
             .slider-item: +news_item('Jan 12, 2018' , 'Plans for 2018', 'https://blog.fluence.ai/starting-2018-token-sale-and-plans-for-the-next-months-49b982a1d04')
