--- a/assets/templates/blocks/about_bottom.pug
+++ b/assets/templates/blocks/about_bottom.pug
@@ -3,4 +3,4 @@
 h2 Became interested<br/>in the project?
 
 .about-button
-    a.button(href="mailto:team@fluence.ai") Join our team
+    a.button(href="mailto:team@fluence.one") Join our team
