--- a/assets/templates/blocks/footer.pug
+++ b/assets/templates/blocks/footer.pug
@@ -20,4 +20,4 @@
         li: a(href=footer_link_whitepaper) Whitepaper
         li: a(href=footer_link_blog) Blog
 
-.footer-bottom © 2018 fluence.ai<br/>All rights reserved
+.footer-bottom © 2018 Fluence Labs<br/>All rights reserved
