--- a/assets/templates/blocks/news.pug
+++ b/assets/templates/blocks/news.pug
@@ -16,11 +16,12 @@ h2 Latest news
     .news-container__items
         .__slider
 
-            .slider-item: +news_item('Feb 14, 2018', 'March status update', 'https://blog.fluence.ai/march-2018-status-update-406b67cd5365')
+            .slider-item: +news_item('May 11, 2018', 'Important Update on the Tokensale', 'https://blog.fluence.ai/update-on-tokensale-product-and-buyback-for-early-contributors-879577282249')
+            .slider-item: +news_item('Apr 6, 2018', 'March status update', 'https://blog.fluence.ai/march-2018-status-update-406b67cd5365')
             .slider-item: +news_item('Feb 14, 2018', 'Jan-Feb status update', 'https://blog.fluence.ai/january-february-status-update-13733c494bad')
             .slider-item: +news_item('Jan 25, 2018', 'Fluence partnership with Friend', 'https://blog.fluence.ai/fluence-partnership-with-friend-platform-c263ece496fd')
-            .slider-item: +news_item('Jan 12, 2018' , 'Plans for 2018', 'https://blog.fluence.ai/starting-2018-token-sale-and-plans-for-the-next-months-49b982a1d04')
+            .slider-item: +news_item('Jan 12, 2018', 'Plans for 2018', 'https://blog.fluence.ai/starting-2018-token-sale-and-plans-for-the-next-months-49b982a1d04')
             .slider-item: +news_item('Dec 29, 2017', 'December status update', 'https://blog.fluence.ai/december-status-update-and-plans-for-2018-9a81fa261a02')
             .slider-item: +news_item('Dec 12, 2017', 'Trouble in the city of clouds', 'https://blog.fluence.ai/trouble-in-the-city-of-clouds-91fabbd5d3e6')
-            .slider-item: +news_item('Dec 1-st, 2017' , 'FPT unlocked today', 'https://blog.fluence.ai/fpt-unlocked-today-ee68e99c5bdc')
+            .slider-item: +news_item('Dec 1-st, 2017', 'FPT unlocked today', 'https://blog.fluence.ai/fpt-unlocked-today-ee68e99c5bdc')
             .slider-item: +news_item('Nov 23, 2017', 'November status update', 'https://blog.fluence.ai/november-status-update-f563147da17d')
