Howard Wu added to advisors

--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -163,5 +163,16 @@ h2 Advisors
         p Security engineer.<br/>At Microsoft he was focused<br/>on software obfuscation, cryptography, anti-hacking<br/>and robustness technologies.
         
         p
-            a(href="https://www.linkedin.com/in/andrey-lelikov-b0b263/") LinkedIn        
+            a(href="https://www.linkedin.com/in/andrey-lelikov-b0b263/") LinkedIn  
+   
+    +person(
+        'howardwu.jpg',
+        'Howard Wu',
+        'Dekrypt Capital'
+    )
+        p Co-founder at Dekrypt Capital.<br/> Left Google for crypto.<br> Doing research at Berkeley Blockchain research division.
+        
+        p
+            a(href="https://www.linkedin.com/in/howardwu125") LinkedIn        
+      
       
