new teammates and advisors

--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -90,6 +90,28 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
             a(href="https://github.com/DmiSergeev")  GitHub
         
     +person(
+        'voronov.png',
+        'Mikhail Voronov',
+        'Development'
+    )
+        p Worked on complex systems development,<br>cryptography, and a bit of ML.<br>At Fluence Mikhail has quite a challenge:<br>R&D at the virtual machines field,<br>in particular, applied to contract verification.
+
+        p
+            a(href="https://github.com/michailvoronov") GitHub
+            
+    +person(
+        'folex.jpg',
+        'Alexey Pyshenko',
+        'Development'
+    )
+        p Background in distributed systems,<br>almost singlehandedly made a backend for a distributed messenger
+                a(href='https://oktos.io') oktos.io.
+                | Alexey had tried many roles: a team lead, DevOps, researcher,<br>but at Fluence he will be working on the R&D<br>for distributed systems, consensus, and validation.
+
+        p
+            a(href="https://www.linkedin.com/in/lekanova/") LinkedIn
+    
+    +person(
         'a_rtemiy.jpg',
         'Artemiy Liarskiy',
         'Dev Relations'
@@ -97,7 +119,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         p Digital marketing specialist<br/>with projects for major brands<br/>and rewarded agencies.<br/> Background in B2B sales, marketing, and copywriting.
 
         p
-            a(href="https://www.linkedin.com/in/orchimada/") LinkedIn
+            a(href="https://github.com/folex") LinkedIn
      
     +person(
         'a_leka.jpg',
@@ -165,6 +187,16 @@ h2 Advisors
         p
             a(href="https://www.linkedin.com/in/andrey-lelikov-b0b263/") LinkedIn  
    
+     +person(
+        'simon.jpg',
+        'Simon Kozlov',
+        'Instrumental Inc'
+    )
+        p Machine Learning and AI expert with a track record<br>of building teams and technology at Silicon Valley<br>startups and larger companies.<br>Previously director of engineering at Roblox (currently valued at $2.4B)<br>and engineer at Microsoft and Dropbox.<br>Teaches Deep Learning in NSU, Russia's top 5<br>science and engineering school.
+        
+        p
+            a(href="https://www.linkedin.com/in/sim0nsays/") LinkedIn 
+    
     +person(
         'howardwu.jpg',
         'Howard Wu',
