--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -104,12 +104,12 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Alexey Pyshenko',
         'Development'
     )
-        p Background in distributed systems,<br>almost singlehandedly made a backend for a distributed messenger
+        p Background in distributed systems,<br>almost singlehandedly made a backend for a distributed messenger 
                 a(href='https://oktos.io') oktos.io.
                 | Alexey had tried many roles: a team lead, DevOps, researcher,<br>but at Fluence he will be working on the R&D<br>for distributed systems, consensus, and validation.
 
         p
-            a(href="https://www.linkedin.com/in/lekanova/") LinkedIn
+            a(href="https://www.github/folex") GitHub
     
     +person(
         'a_rtemiy.jpg',
@@ -188,16 +188,6 @@ h2 Advisors
             a(href="https://www.linkedin.com/in/andrey-lelikov-b0b263/") LinkedIn  
    
     +person(
-        'simon.jpg',
-        'Simon Kozlov',
-        'Instrumental Inc'
-    )
-        p Machine Learning and AI expert with a track record<br>of building teams and technology at Silicon Valley<br>startups and larger companies.<br>Previously director of engineering at Roblox (currently valued at $2.4B)<br>and engineer at Microsoft and Dropbox.<br>Teaches Deep Learning in NSU, Russia's top 5<br>science and engineering school.
-        
-        p
-            a(href="https://www.linkedin.com/in/sim0nsays/") LinkedIn 
-    
-    +person(
         'howardwu.jpg',
         'Howard Wu',
         'Dekrypt Capital'
@@ -206,5 +196,14 @@ h2 Advisors
         
         p
             a(href="https://www.linkedin.com/in/howardwu125") LinkedIn        
-      
+    
+    +person(
+        'simon.jpg',
+        'Simon Kozlov',
+        'Instrumental Inc'
+    )
+        p Machine Learning and AI expert with a track record<br>of building teams and technology at Silicon Valley<br>startups and larger companies.<br>Previously director of engineering at Roblox (currently valued at $2.4B)<br>and engineer at Microsoft and Dropbox.<br>Teaches Deep Learning in NSU, Russia's top 5<br>science and engineering school.
+        
+        p
+            a(href="https://www.linkedin.com/in/sim0nsays/") LinkedIn   
       
