--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -94,7 +94,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Mikhail Voronov',
         'Development'
     )
-        p Worked on complex systems development,<br>cryptography, and a bit of ML.<br>At Fluence Mikhail has quite a challenge:<br>R&D at the virtual machines field,<br>in particular, applied to contract verification.
+        p Reverse engineer and system programmer<br>with a strong knowledge of OS internals and process virtual machines architecture.<br>Ex-captain of the CTF (cyber security contests) team,<br>computer security PhD candidate (exploit detection),<br>interested in finding public products vulnerabilities (owns few CVEs).
 
         p
             a(href="https://github.com/michailvoronov") GitHub
@@ -104,12 +104,12 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Alexey Pyshenko',
         'Development'
     )
-        p Background in distributed systems,<br>almost singlehandedly made a backend for a distributed messenger 
-                a(href='https://oktos.io') oktos.io.
-                | Alexey had tried many roles: a team lead, DevOps, researcher,<br>but at Fluence he will be working on the R&D<br>for distributed systems, consensus, and validation.
+        p Seasoned distributed systems engineer<br>with a deep functional languages knowledge. Previously longtime key developer of the messenger platform
+            a(href="https://oktos.io") oktos.io,
+            | where he implemented end-to-end encrypted<br>communication and key management protocols;<br>integrated Bitcoin and Ethereum wallets functionality.
 
         p
-            a(href="https://www.github/folex") GitHub
+            a(href="https://www.github.com/folex") GitHub
     
     +person(
         'a_rtemiy.jpg',
@@ -202,7 +202,7 @@ h2 Advisors
         'Simon Kozlov',
         'Instrumental Inc'
     )
-        p Machine Learning and AI expert with a track record<br>of building teams and technology at Silicon Valley<br>startups and larger companies.<br>Previously director of engineering at Roblox (currently valued at $2.4B)<br>and engineer at Microsoft and Dropbox.<br>Teaches Deep Learning in NSU, Russia's top 5<br>science and engineering school.
+        p Machine Learning and AI expert with a track record of building<br>teams and technology at Silicon Valley startups and larger companies.<br>Previously director of engineering at Roblox (currently valued at $2.4B)<br>and engineer at Microsoft and Dropbox.<br>Teaches Deep Learning in NSU,<br>Russia's top 5 science and engineering school.
         
         p
             a(href="https://www.linkedin.com/in/sim0nsays/") LinkedIn   
