--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -94,7 +94,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Mikhail Voronov',
         'Development'
     )
-        p Reverse engineer and system programmer<br>with a strong knowledge of OS internals and process virtual machines architecture.<br>Ex-captain of the CTF (cyber security contests) team,<br>computer security PhD candidate (exploit detection),<br>interested in finding public products vulnerabilities (owns few CVEs).
+        p Reverse engineer and system programmer with a strong knowledge<br>of OS internals and process virtual machines architecture.<br>Ex-captain of the CTF (cyber security contests) team,<br>computer security PhD candidate (exploit detection), interested in finding public products vulnerabilities (owns few CVEs).
 
         p
             a(href="https://github.com/michailvoronov") GitHub
@@ -104,9 +104,9 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
         'Alexey Pyshenko',
         'Development'
     )
-        p Seasoned distributed systems engineer<br>with a deep functional languages knowledge. Previously longtime key developer of the messenger platform
+        p Seasoned distributed systems engineer with a deep functional languages knowledge. Previously longtime key developer<br>of the messenger platform
             a(href="https://oktos.io") oktos.io,
-            | where he implemented end-to-end encrypted<br>communication and key management protocols;<br>integrated Bitcoin and Ethereum wallets functionality.
+            | where he implemented end-to-end encrypted communication and key management protocols;<br>integrated Bitcoin and Ethereum wallets functionality.
 
         p
             a(href="https://www.github.com/folex") GitHub
