--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -101,7 +101,7 @@ p Fluence Labs was created to build a decentralized network technology.<br/>We b
             
     +person(
         'folex.jpg',
-        'Alexey Pyshenko',
+        'Alexey Pyshnenko',
         'Development'
     )
         p Seasoned distributed systems engineer with a deep functional languages knowledge. Previously longtime key developer<br>of the messenger platform
