--- a/assets/templates/blocks/images.pug
+++ b/assets/templates/blocks/images.pug
@@ -1,4 +1,4 @@
-- var link = "https://github.com/fluencelabs/research/blob/master/FluencePaper.pdf"
+- var link = "https://github.com/fluencelabs/fluence"
 
 h2 How Fluence solves these issues? 
 
@@ -23,4 +23,4 @@ ul
         p The nodes are independent and spread over the world. Only you can access your data.
 
 .images-bottom
-    a.button.button-accent(href=link) Discover the whitepaper
+    a.button.button-accent(href=link) Dig into code
