whitepaper link fix

--- a/assets/templates/blocks/footer.pug
+++ b/assets/templates/blocks/footer.pug
@@ -4,6 +4,7 @@
 - var footer_link_demo       = "https://github.com/FluenceLabs"
 - var footer_link_about      = "/about.html"
 - var footer_link_whitepaper = "https://github.com/fluencelabs/research/blob/master/FluencePaper.pdf"
+- var footer_link_telegram   = "https://t.me/FluenceAI"
 - var footer_link_blog       = "https://blog.fluence.ai/"
 
 .footer-links
@@ -13,6 +14,7 @@
         li: a(href=footer_link_policy) Privacy policy
         li: a(href=footer_link_demo) Fluence demo
         li: a(href=footer_link_about) About
+        li: a(href=footer_link_telegram) Telegram
         li: a(href=footer_link_blog) Blog
 
 .footer-bottom © 2018 Fluence Labs<br/>All rights reserved
