--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -1,4 +1,4 @@
-- var header_link_twitter  = "https://twitter.com/@FluenceAI"
+- var header_link_twitter  = "https://twitter.com/@FluenceOne"
 - var header_link_telegram = "https://t.me/joinchat/AAEssEJVYu-7YvRc0XNZaQ"
 - var header_link_btc      = "https://bitcointalk.org/index.php?topic=2744525"
 - var header_link_github   = "https://github.com/FluenceLabs"
