--- a/assets/templates/blocks/top.pug
+++ b/assets/templates/blocks/top.pug
@@ -1,4 +1,4 @@
-- var link_top_whitepaper = "https://tokensale.fluence.ai"
+- var link_top_whitepaper = "https://tokensale.fluence.one"
 - var link_top_github     = "https://github.com/FluenceLabs"
 - var link_top_about      = "/about.html"
 - var link_top_blog     = "https://blog.fluence.ai"
