--- a/assets/templates/blocks/footer.pug
+++ b/assets/templates/blocks/footer.pug
@@ -4,7 +4,7 @@
 - var footer_link_demo       = "https://github.com/FluenceLabs"
 - var footer_link_about      = "/about.html"
 - var footer_link_whitepaper = "https://github.com/fluencelabs/research/blob/master/FluencePaper.pdf"
-- var footer_link_telegram   = "https://t.me/FluenceOne"
+- var footer_link_telegram   = "https://t.me/Fluence_One"
 - var footer_link_blog       = "https://blog.fluence.ai/"
 
 .footer-links
